--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -27,7 +27,7 @@
 			</div>
 			<div class="col-sm-10">
 				<center>
-					<h1 class="tagline">W A R R E N</h1>
+					<h1 class="tagline">P A A R R T H</h1>
 				</center>
 			</div>			
 			<div class="col-sm-1">
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 		<div class="row footer">
-			<center>Nityan Suman (Email: nityan.suman@gmail.com | Github: @nityansuman)</center>
+			<center>PAARRTH SHAH(EMAIL:PAARRTH.SHAH@svkmmumbai.onmicrosoft.com)</center>
 		</div>
 	</div>
 </body>
