--- a/src/templates/output.html
+++ b/src/templates/output.html
@@ -10,6 +10,31 @@
 	<link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/font-awesome.min.css">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+		  google.charts.load('current', {'packages':['corechart']});
+		  google.charts.setOnLoadCallback(drawChart);
+
+	  function drawChart() {
+		var data = google.visualization.arrayToDataTable([
+		  ['Mon', 20, 28, 38, 45],
+		  ['Tue', 31, 38, 55, 66],
+		  ['Wed', 50, 55, 77, 80],
+		  ['Thu', 77, 77, 66, 50],
+		  ['Fri', 68, 66, 22, 15]
+		  // Treat first row as data as well.
+		], true);
+
+		var options = {
+		  legend:'none'
+		};
+
+		var chart = new google.visualization.CandlestickChart(document.getElementById('chart_div'));
+
+		chart.draw(data, options);
+	  }
+    </script>
 </head>
 
 <!-- Body content -->
@@ -27,6 +52,10 @@
 		<div class="row">
 			<div class="blank100">
 				<!-- Blank Space -->
+			</div>
+		</div>
+		<div class="row">
+			<div id="chart_div" style="width: 900px; height: 500px;">
 			</div>
 		</div>
 		<div class="row">
@@ -95,7 +124,7 @@
 			</div>
 		</div>
 		<div class="row footer">
-			<center>Nityan Suman (Email: nityan.suman@gmail.com | Github: @nityansuman)</center>
+			<center>PAARRTH SHAH(EMAIL:PAARRTH.SHAH@svkmmumbai.onmicrosoft.com)</center>
 		</div>
 	</div>
 </body>
