--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -2,8 +2,8 @@
 body {
 	font-family: "Roboto";
 	color: white;
-	background: #b92b27;  /* fallback for old browsers */background: -webkit-linear-gradient(to right, #1565C0, #b92b27);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #1565C0, #b92b27); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: #b92b27;  /* fallback for old browsers */background: -webkit-linear-gradient(to right, #000, #b92b27);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #000, #b92b27); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 
@@ -58,9 +58,9 @@ p {
 
 /* Footer */
 .footer {
-    background-color: transparent;
+    /* background-color: transparent; */
     text-align: center;
-    color: white;
+    color: black;
 }
 
 
