--- a/src/templates/output.html
+++ b/src/templates/output.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
 		  google.charts.load('current', {'packages':['corechart']});
 		  google.charts.setOnLoadCallback(drawChart);
 
@@ -34,7 +34,7 @@
 
 		chart.draw(data, options);
 	  }
-    </script>
+    </script> -->
 </head>
 
 <!-- Body content -->
@@ -42,7 +42,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-10">
-				<h2 class="white_text">{{ticker}} |  {{sector}} | {{country}} | {{website}}</h2>
+				<h2 class="white_text">{{ticker}} |  {{sector}} | {{country}} | {{website}} | {{employees}}</h2>
 			</div>
 			<div class="col-sm-2">
 				<br>
@@ -55,27 +55,38 @@
 			</div>
 		</div>
 		<div class="row">
-			<div id="chart_div" style="width: 900px; height: 500px;">
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-1">
-			</div>
 			<div class="col-sm-10">
 				<p>
 					<strong>
-						About Organization
+						About Organization : 
 					</strong>
 				</p>
 				<h4 class="white_text">{{summary}}</h4>
 			</div>			
-			<div class="col-sm-1">
-			</div>
 		</div>
 		<div class="row">
-			<div class="blank100">
-				<!-- Blank Space -->
-			</div>
+			<div class="col-sm-10">
+				<p>
+					<strong>
+						In News at : 
+					</strong>
+				</p>
+				<h4 class="white_text">{% for item in url -%}
+					{{ item + " " + ","}}
+				{%- endfor %}</h4>
+			</div>			
+		</div>
+		<div class="row">
+			<div class="col-sm-10">
+				<p>
+					<strong>
+						Trendy Topics : 
+					</strong>
+				</p>
+				<h4 class="white_text">{% for item in title -%}
+					{{ item + " " + ","}}
+				{%- endfor %}</h4>
+			</div>			
 		</div>
 		<div class="row">
 			<div class="col-sm-6">
